fix(datetime): selected day overflow in first calendar row
Resolves #24408

--- a/core/src/components/datetime/datetime.md.scss
+++ b/core/src/components/datetime/datetime.md.scss
@@ -54,7 +54,7 @@
 // Calendar / Body
 // -----------------------------------
 :host .calendar-body .calendar-month .calendar-month-grid {
-  @include padding(0px, 10px, 0px, 10px);
+  @include padding(3px, 10px, 0px, 10px);
 
   /**
    * Calendar on MD will show an empty row
